--- a/_partials/_title.scss
+++ b/_partials/_title.scss
@@ -4,11 +4,11 @@
     text-align: center;
     position: relative;
     h1{
-        margin: 25px 0 0;
+        margin: 0;
         a{
         @include h1Styles(4rem);
         text-decoration: none;
-        text-shadow: 1px 1px $mocha;
+        text-shadow: 1.5px 1.5px $cream;
         text-transform: uppercase;
             span{
                 font-size: 6rem;
@@ -19,7 +19,7 @@
     p{
         @include instructionStyles(1.8rem);
         color: $black;
-        text-shadow: 1px 1px $mocha;
+        text-shadow: 1px 1px $cream;
     } 
 }
 
