--- a/_partials/_setup.scss
+++ b/_partials/_setup.scss
@@ -26,10 +26,16 @@ a{
     margin: 0 auto;
     width: 90%;
 }
+ 
+header{
+    background:  linear-gradient(90deg, rgba(232, 222, 196, 0.4), rgba(146, 127, 112, 0.8)), url("../assets/coffee-1-unsplash.jpg");
+    background-position: 0 center;
+    background-size: cover; 
+    padding: 30px 0 0 0;
+}
 
-// @media (max-width: 1000px){
-
-//     body{
-//     overflow: visible;
-// }
-// }
+main{
+    background:  linear-gradient(90deg, rgba(232, 222, 196, 0.6), rgba(146, 127, 112, 0.8)), url("../assets/coffee-4-unsplash.jpg");
+    background-size: cover;
+   
+}
