--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,6 +6,6 @@
 @import '../_partials/_instructions.scss';
 @import '../_partials/_score.scss';
 @import '../_partials/_input.scss';
-
 @import '../_partials/_buttons.scss';
 @import '../_partials/_box.scss';
+@import '../_partials/_footer.scss';
