added reload button

--- a/_partials/_globalVars.scss
+++ b/_partials/_globalVars.scss
@@ -9,6 +9,7 @@ $grey: #b8bbbc;
 $green: #49b675;
 $red: #ab0031;
 
+//fonts
 $mainFont: 'Josefin Sans', sans-serif;
 $taglineFont: 'Rum Raisin', sans-serif;
 
