--- a/_partials/_box.scss
+++ b/_partials/_box.scss
@@ -1,3 +1,11 @@
+//cards body
+main{
+    background:  linear-gradient(90deg, rgba(232, 222, 196, 0.6), rgba(146, 127, 112, 0.8)), url("../assets/coffee-4-unsplash.jpg");
+    background-size: cover;
+   
+}
+
+//cards 
 .cards{
 	display: flex;
   	flex-wrap: wrap;
@@ -93,6 +101,8 @@
 	background-position: center center;
 	pointer-events: none;
 }
+
+// MEDIA QUERIES
 
 @media (max-width: 1000px){
 
