--- a/_partials/_buttons.scss
+++ b/_partials/_buttons.scss
@@ -1,5 +1,6 @@
 .submitButton,
-.reload{
+.reload,
+.reloadModal{
         background-color: $pumpkinSpice;
         border: none;
         color: $black;
@@ -11,6 +12,14 @@
 
 .submitButton{
     padding: 5px;
+}
+
+.reloadModal{
+    @include border($chocolate);
+    font-size: 1.25rem;
+    margin-top: 20px;
+    padding: 10px 20px;
+    text-shadow: 1px 1px $cream;
 }
 
 .reload{
