--- a/_partials/_title.scss
+++ b/_partials/_title.scss
@@ -1,5 +1,12 @@
 //App title and tagline
 
+header{
+    background:  linear-gradient(90deg, rgba(232, 222, 196, 0.4), rgba(146, 127, 112, 0.8)), url("../assets/coffee-1-unsplash.jpg");
+    background-position: 0 center;
+    background-size: cover; 
+    padding: 30px 0 0 0;
+}
+
 .title{
     text-align: center;
     position: relative;
@@ -27,6 +34,7 @@
     display: none;
 }
 
+//MEDIA QUERIES
 @media (max-width: 890px){
     
     .title{
