--- a/_partials/_input.scss
+++ b/_partials/_input.scss
@@ -1,12 +1,12 @@
 //input bar stylings 
 
-.formFlex{
+.form-flex{
     align-items: center;
     display: flex;
     justify-content: space-between;
 }
 
-.appInput{
+.app-input{
     border: 2px $mocha solid;
     display: flex;
     justify-content: space-between;
@@ -14,17 +14,17 @@
     background-color: $black;
     padding: 0 20px;
     width: 100%;
-    .editionInfo{
+    .edition-info{
          p{
             @include instructionStyles(1.75rem); 
             color: $cream;
         }
     }
-    .editionInfo,
+    .edition-info,
     form {
         margin: 0 15px;   
     }
-    .scoreCard{
+    .score-card{
         justify-self: end;
     }
 }
@@ -44,17 +44,17 @@ form {
     }
 }
 
-.scoreCard{
+.score-card{
     @include instructionStyles(1.75rem);
     display: flex;
     h4{
         margin: 0 10px;
         text-transform: uppercase;
     }
-    .rightAnswer{
+    .right-answer{
         color: $green;
     }
-    .wrongAnswer{
+    .wrong-answer{
         color: $red;
     }
 }
@@ -65,13 +65,13 @@ form {
 
 @media (max-width: 1300px){
     
-   .appInput{
-       .editionInfo{
+   .app-input{
+       .edition-info{
             p{
                 font-size: 1.5rem;
             }
         }
-        .scoreCard{
+        .score-card{
             font-size: 1.5rem;
         }
     }
@@ -80,13 +80,13 @@ form {
 
 @media (max-width: 1200px){
     
-   .appInput{
-       .editionInfo{
+   .app-input{
+       .edition-info{
             p{
                 font-size: 1.25rem;
             }
         }
-        .scoreCard{
+        .score-card{
             font-size: 1.5rem;
         }
     }
@@ -100,7 +100,7 @@ form {
 }
 @media (max-width: 1100px){
     
-   .appInput{
+   .app-input{
         justify-content: center;
         padding: 15px 20px;
     }   
@@ -108,12 +108,12 @@ form {
 }
 @media (max-width: 900px){
     
-   .appInput{
+   .app-input{
         justify-content: space-around;
       
     }   
    
-    .formFlex{
+    .form-flex{
         display: flex;
         flex-direction: column;
     }
@@ -122,7 +122,7 @@ form {
 
 @media (max-width: 767px){
 
-    .appInput{
+    .app-input{
         flex-direction: column;
     }   
 
@@ -131,21 +131,21 @@ form {
 }
 @media (max-width: 500px){
 
-    .appInput{
-        .scoreCard h4{
+    .app-input{
+        .score-card h4{
             font-size: 1.25rem;
         }
     }   
 
-    .appInput{
-        .editionInfo{
+    .app-input{
+        .edition-info{
             text-align: center;
             width: 250px;
             p{
                 font-size: 1.25rem;
             }
         }
-        .scoreCard{
+        .score-card{
             font-size: 1.25rem;
         }
     }
@@ -170,7 +170,7 @@ form {
 }
 @media (max-width: 480px){
 
-    .formFlex{
+    .form-flex{
         display: flex;
         flex-direction: column;
         width: 100%;
