--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,7 +1,7 @@
 // GENERAL SETUP, VARIABLES, MIXINS
 
 @import '../_partials/_setup.scss';
-@import '../_partials/_globalVars.scss';
+@import '../_partials/_global-vars.scss';
 @import '../_partials/_title.scss';
 @import '../_partials/_instructions.scss';
 @import '../_partials/_score.scss';
