--- a/_partials/_box.scss
+++ b/_partials/_box.scss
@@ -60,7 +60,13 @@ main{
 	@include border($pumpkinSpice);
 	color: transparent;
 	background-color: $cream;
-	background-size: contain;
+	background-image: url("../assets/coffee.svg");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 70% 70%;
+	// display: flex;
+	// justify-content: center;
+	// align-items:  center;
 	box-shadow: 1px 1px $chocolate;
 	transform:rotateY(0deg);
 	
